--- a/src/main/resources/static/gentella/css/custom.scss
+++ b/src/main/resources/static/gentella/css/custom.scss
@@ -2277,7 +2277,7 @@ a.btn-success, a.btn-primary, a.btn-warning, a.btn-danger {
   color: #fff;
 }
 .btn-success {
-  background: #26B99A;
+  background: #1abc9c;
   border: 1px solid #169F85;
 }
 .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open .dropdown-toggle.btn-success {
@@ -3336,7 +3336,7 @@ ul.project_files li a i {
 .price {
   font-size: 40px;
   font-weight: 400;
-  color: #26B99A;
+  color: #1abc9c;
   margin: 0;
 }
 .prod_title {
@@ -4211,7 +4211,7 @@ fieldset {
 }
 
 .progress-bar-success {
-    background-color: #26B99A;
+    background-color: #1abc9c;
 }
 
 .progress_summary .progress {
