Rimosso custom.scss e risistemati i css adeguatamente

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
 	<body th:fragment="footer">
 	
 		<!-- link back to top -->
-		<a href="#0" class="cd-top">Top</a>
+		<a href="#0" class="cd-top"></a>
 	
 		<!-- Bootstrap -->
 		<script src="../static/gentella/js/bootstrap.min.js"
