--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -3317,6 +3317,14 @@ html > body > .ui-pnotify {
   color: #c0392b;
   border-width: 2px;
 }
+.btn.primary{
+	background: #337ab7;
+	border-color: #2e6da4;
+}
+.btn-success{
+	background: #1abc9c;
+	border-color: #169f85;
+}
 .btn-warning {
   background: #f0ad4e;
   border-color: #f0ad4e;
