--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -3253,27 +3253,27 @@ html > body > .ui-pnotify {
 /* theming */
 
 .alert-success {
-  color: #ffffff;
+  color: #fff;
   background-color: rgba(38, 185, 154, 0.88);
   border-color: rgba(38, 185, 154, 0.88);
 }
 .alert-info {
-  color: #E9EDEF;
+  color: #fff;
   background-color: rgba(52, 152, 219, 0.88);
   border-color: rgba(52, 152, 219, 0.88);
 }
 .alert-warning {
-  color: #E9EDEF;
+  color: #fff;
   background-color: rgba(243, 156, 18, 0.88);
   border-color: rgba(243, 156, 18, 0.88);
 }
 .alert-danger, .alert-error {
-  color: #E9EDEF;
+  color: #fff;
   background-color: rgba(231, 76, 60, 0.88);
   border-color: rgba(231, 76, 60, 0.88);
 }
 .alert-dark, .btn-dark {
-  color: #E9EDEF;
+  color: #fff;
   background-color: rgba(52, 73, 94, 0.88);
   border-color: rgba(52, 73, 94, 0.88);
 }
