Rimossa label e pulsante "Torna su"

--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -156,7 +156,7 @@
 										${personaWrapper.persona.componenteComitatoScientifico}"
 								class="item form-group">
 								<label class="control-label col-md-4 col-sm-4 col-xs-12"
-									for="isStraniero_persona"><span th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span> <span class="required">*</span></label>
+									for="isStraniero_persona"><span th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span></label>
 								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<div class="checkbox">
