--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -278,7 +278,7 @@
 									</div>
 									
 									<!-- delega -->
-									<th:block th:include="fragments/allegati :: allegati(providerForm, false, delegaRichiedenteFile, null, null)" ></th:block>
+									<th:block th:include="fragments/allegati :: allegati(providerForm, false, delegaRichiedenteFile, null, null, true)" ></th:block>
 									
 									<!-- Invia dati -->
 									<div class="item form-group text-right">
