--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,30 +1,323 @@
 <!DOCTYPE html>
-<html layout:decorator="fragments/template" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	layout:decorator="fragments/template">
+<head lang="it">
 </head>
 <body>
-
-	<div layout:fragment="content">
+	<div layout:fragment="content" id="main-container" th:fragment="content">
 		<div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="dashboard_graph">
-
-                            <div class="row x_title">
-                                <div class="col-md-6">
-                                    <h3>Home Page</h3>
-                                </div>
-                            </div>
-
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                            </div>
-
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-
-                </div>
-           <br />
+			<div class="col-xs-12">
+				<div class="x_panel">
+					<div class="x_title">
+						<h2 th:text="#{label.validazione}">label.validazione</h2>
+						<div class="pull-right buttons-header">
+							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
+							<button id="other-validation-btn" class="btn btn-primary pull-right" th:text="#{label.visualizza_altri}" data-toggle="modal" data-target=".modal-validate"></button>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					
+					<!-- finestra modale visualizzazione stato validazione -->
+					<div id="validazione-modal" class="modal fade modal-validate" tabindex="-1" role="dialog" aria-hidden="true">
+						<div class="modal-dialog modal-lg">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+									</button>
+									<h4 class="modal-title" id="myModalLabel" th:text="#{label.stato_validazione}">label.stato_validazione</h4>
+								</div>
+								<div class="modal-body">
+									<table id="tabella-modale" class="datatable-responsive-search-validation table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+										<thead>
+											<tr>
+												<th th:text="#{label.id}">label.id</th>
+												<th th:text="#{label.valutatore1}">Nome</th>
+												<th th:text="#{label.valutatore2}">Nome</th>
+												<th th:text="#{label.valutatore3}">Nome</th>
+												<th th:text="#{label.valutatore4}">Nome</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>11</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+											</tr>
+											<!-- eliminare -->
+											<tr>
+												<td>28</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<td>28</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<td>28</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<td>46</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
+														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="click" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+													</div>
+												</td>
+												<td class="otherValidationCheck">
+													<div>
+														<span class="fa fa-check green" th:title="#{label.valido}"></span>
+													</div>
+												</td>
+											</tr>
+											<!-- /eliminare -->
+										</tbody>
+									</table>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- panel con il form -->
+					<div class="x_content">
+						<!-- URL messo a caso! CAMBIARE -->
+						<form id="formValidazione" class="form-horizontal form-label-left" th:action="@{|/validazione/${validazioneWrapper?.accreditamentoId}/validatore/${validazioneWrapper?.valutazioneId}/save|}"
+								method="post" enctype="multipart/form-data" novalidate="novalidate">
+							
+							<!-- mettere th:value -->	
+							<input type="hidden" name="editId" />
+							<!-- mettere th:field -->
+							<input type="hidden" />
+														
+							<table class="datatable-responsive-validate table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+								<thead>
+									<tr>
+										<th th:text="#{label.id}">label.id</th>
+										<th th:text="#{label.campo}">label.campo</th>
+										<th th:text="#{label.valore}">label.valore</th>
+										<th th:text="#{label.valutazione}">label.valutazione</th>
+										<th th:text="#{label.note}" style="text-align: left">label.note</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>28</td>
+										<td>Posta Elettronica Certificata (PEC)</td>
+										<td>gverdi@pec.it</td>
+										<td class="tdRadioValutazione">
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneSi" name="valutazioneValue" th:value="Sì" />
+														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
+												</label>
+											</span>
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneNo" name="valutazioneValue" th:value="No" />
+													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
+												</label>
+											</span>
+										</td>
+										<td><textarea name="note" style="resize: none;"></textarea></td>
+									</tr>
+									<!-- eliminare -->
+									<tr>
+										<td>28</td>
+										<td>Posta Elettronica Certificata (PEC)</td>
+										<td>gverdi@pec.it</td>
+										<td class="tdRadioValutazione">
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneSi" name="valutazioneValue1" th:value="Sì" />
+														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
+												</label>
+											</span>
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneNo" name="valutazioneValue1" th:value="No" />
+													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
+												</label>
+											</span>
+										</td>
+										<td><textarea name="note" style="resize: none;"></textarea></td>
+									</tr>
+									<tr>
+										<td>28</td>
+										<td>Posta Elettronica Certificata (PEC)</td>
+										<td>gverdi@pec.it</td>
+										<td class="tdRadioValutazione">
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneSi" name="valutazioneValue2" th:value="Sì" />
+														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
+												</label>
+											</span>
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneNo" name="valutazioneValue2" th:value="No" />
+													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
+												</label>
+											</span>
+										</td>
+										<td><textarea name="note" style="resize: none;"></textarea></td>
+									</tr>
+									<tr>
+										<td>28</td>
+										<td>Posta Elettronica Certificata (PEC)</td>
+										<td>gverdi@pec.it</td>
+										<td class="tdRadioValutazione">
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneSi" name="valutazioneValue3" th:value="Sì" />
+														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
+												</label>
+											</span>
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneNo" name="valutazioneValue3" th:value="No" />
+													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
+												</label>
+											</span>
+										</td>
+										<td><textarea name="note" style="resize: none;"></textarea></td>
+									</tr>
+									<tr>
+										<td>28</td>
+										<td>Posta Elettronica Certificata (PEC)</td>
+										<td>gverdi@pec.it</td>
+										<td class="tdRadioValutazione">
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneSi" name="valutazioneValue4" th:value="Sì" />
+														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
+												</label>
+											</span>
+											<span class="radio radioValutazione">
+												<label class="labelRadioValutazione">
+													<input type="radio" class="flat"
+														id="valutazioneNo" name="valutazioneValue4" th:value="No" />
+													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
+												</label>
+											</span>
+										</td>
+										<td><textarea name="note" style="resize: none;"></textarea></td>
+									</tr>
+									<!-- /eliminare -->
+								</tbody>
+							</table>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-
 </body>
 </html>
+							
