--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -12,10 +12,12 @@
 						<div class="x_title">
 							<h2 th:if="${accreditamentoWrapper.accreditamento.new}" th:text="#{label.nuova_domanda}">label.nuova_domanda</h2>
 							<h2 th:unless="${accreditamentoWrapper.accreditamento.new}" th:text="${accreditamentoWrapper.accreditamento.tipoDomanda} + ' - ' + ${accreditamentoWrapper.accreditamento.stato}">Provvisorio - bozza</h2>
-							<a class="btn btn-primary pull-right"
-							th:if="${accreditamentoWrapper.canSend}"
-							th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/send|}"
-							th:text="#{label.invia_domanda}">label.invia_domanda</a>
+							<div class="pull-right buttons-header">	
+								<a class="btn btn-primary pull-right"
+								th:if="${accreditamentoWrapper.canSend}"
+								th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/send|}"
+								th:text="#{label.invia_domanda}">label.invia_domanda</a>
+							</div>
 							<div class="clearfix"></div>
 						</div>
 						<div class="x_content">
