--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -11,10 +11,12 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.dati_attività}">Dati relativi all’attività</h2>
-						<th:block th:unless="${#lists.isEmpty(datiAccreditamentoWrapper.idEditabili)}">
-							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamento" type="submit"></button>
-						</th:block>
-						<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
+						<div class="pull-right buttons-header">
+							<th:block th:unless="${#lists.isEmpty(datiAccreditamentoWrapper.idEditabili)}">
+								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamento" type="submit"></button>
+							</th:block>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
+						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
